--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "mongo": "^0.1.0",
     "mongoose": "^5.4.7",
     "morgan": "^1.9.1",
     "path": "^0.12.7"
