--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "prestart": "next build",
+    "start": "next start -p ${PORT}"
   },
   "repository": {
     "type": "git",
