--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "next build",
-    "start": "next start -p ${PORT}"
+    "build": "next build",
+    "dev": "node server.js",
+    "postinstall": "npm run build",
+    "start": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
