--- a/package.json
+++ b/package.json
@@ -7,16 +7,13 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
-    "express-handlebars": "^3.0.0",
-    "mongo": "^0.1.0",
     "mongoose": "^5.4.7",
     "morgan": "^1.9.1",
     "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
-    "heroku-postbuild": "next build",
-    "start": "next start -p $PORT"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
